--- a/package.json
+++ b/package.json
@@ -3,27 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^1.0.0-rc.0",
+    "@material-ui/icons": "^1.0.0-rc.0",
+    "firebase": "^5.0.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "2.0.0-next.66cc7a90"
+    "react-redux": "^5.0.7",
+    "react-redux-firebase": "^2.1.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "2.0.0-next.66cc7a90",
+    "redux": "^4.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "precommit": "pretty-quick staged",
+    "analyze": "source-map-explorer build/static/js/main.*",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom"
   },
   "browserslist": {
     "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
+      "last 1 chrome versions",
+      "last 1 firefox versions",
+      "last 1 edge versions"
     ],
     "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
+      "last 1 chrome versions",
+      "last 1 firefox versions",
+      "last 1 edge versions"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
+    "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
+    "source-map-explorer": "^1.5.0"
   }
 }
