--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "homepage": "https://binarylogician.github.io/suite/",
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.0",
-    "@material-ui/icons": "^1.0.0-rc.0",
-    "firebase": "^5.0.2",
+    "@material-ui/core": "^1.0.0",
+    "@material-ui/icons": "^1.0.0",
+    "firebase": "^5.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
