--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "downshift": "^1.31.14",
+    "final-form": "^4.6.1",
     "firebase": "^5.0.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-final-form": "^3.4.2",
     "react-redux": "^5.0.7",
     "react-redux-firebase": "^2.1.1",
     "react-router-dom": "^4.2.2",
