--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "downshift": "^1.31.14",
     "final-form": "^4.6.1",
     "firebase": "^5.0.3",
+    "number-to-words": "^1.2.3",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-final-form": "^3.4.2",
