--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "A Suite",
-  "name": "A Suite",
+  "short_name": "MeawwDo",
+  "name": "MeawwDo",
   "icons": [
     {
       "src": "favicon.ico",
